# FormFinder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  20250815_h2h_cache_and_predictions.sql  API_Integration_Plan.md  ARCHITECTURE.md  CHANGELOG.md  CLEAR_TABLE_DATA_README.md  DASHBOARD_README.md  DATABASE_MIGRATION_SUMMARY.md  DATABASE_RESET_GUIDE.md  DATA_COLLECTION_TRAINING_SEPARATION_PRD.md  DataFetcher.py  DataProcessor.py  Dockerfile  H2H_COLLECTION_GUIDE.md  IMPLEMENTATION_STATUS.md  MARKOV_CHAIN_IMPLEMENTATION_PRD.md  Makefile  NOTIFIER_README.md  PRD — FormFinder Goal Prediction Model (Over-Under)  PredictorOutputter.py  Production-ready scaffolding.md  README.md  README_DATA_SEPARATION.md  README_POSTGRESQL_SETUP.md  RSS_SENTIMENT_IMPLEMENTATION_PLAN.md  Soccerdata API Documentation.md  Training_Plan.md  add_season_to_standings.py  add_seasons.py  analyze_feature_discrepancy.py  analyze_missing_features.py  analyze_unused_columns.py  api_key_diagnosis.md  apply_migration.py  bootstrap_calibration.py  calculate_and_update_form.py  check_all_missing_fixtures.py  check_available_fixtures.py  (+306 more)
.streamlit/: config.toml  secrets.toml  secrets.toml.example
DB Migration Files/: migrate_csv_to_db.py  migrate_csv_to_db_fixed.py
Dev-Test Files/: test_core_functionality.py  test_database_fetcher.py  test_full_pipeline.py  test_postgresql_connection.py
config/: config.py
database/: schema.sql
docs/: duplicate_handling.md
examples/: use_notifier.py
formfinder/: DataFetcher.py  DataProcessor.py  PredictorOutputter.py  cli.py  combined_fetch_summary.py  config.py  data_audit.py  database.py  db_h2h_computer.py  enhanced_feature_computer.py  exceptions.py  feature_precomputer.py  features.py  h2h_collection_service.py  h2h_fallback_system.py  h2h_manager.py  h2h_monitoring.py  h2h_scheduler.py  historical_fetcher.py  logger.py  main.py  markov_feature_generator.py  markov_state_classifier.py  markov_transition_calculator.py  monitoring.py  news_manager.py  news_monitoring.py  news_providers.py  notifier.py  orchestrator.py  rss_cache.py  rss_cache_pg.py  rss_content_parser.py  rss_feed_manager.py  rss_models.py  rss_monitoring.py  rss_monitoring_pg.py  rss_news_provider.py  scheduler.py  sentiment.py  (+4 more)
migrations/: 20250101_data_collection_training_separation.sql  20250120_markov_chain_tables.sql  20250815_h2h_cache_and_predictions.sql  add_missing_features.py
models/: feature_scaler_20250822_115859.joblib  feature_scaler_20250824_172540.joblib  feature_scaler_20250824_184822.joblib  feature_scaler_20250825_220803.joblib  feature_scaler_20250826_092155.joblib  feature_scaler_20250827_055938.joblib  feature_scaler_20250901_031400.joblib  feature_scaler_20250901_135336.joblib  goal_regressor_20250822_115859.joblib  goal_regressor_20250823_161639.joblib  goal_regressor_20250824_172540.joblib  goal_regressor_20250824_184822.joblib  goal_regressor_20250825_220803.joblib  goal_regressor_20250826_092155.joblib  goal_regressor_20250827_055938.joblib  goal_regressor_20250901_030637.joblib  goal_regressor_20250901_135336.joblib  metadata_20250822_115859.json  metadata_20250823_161639.json  metadata_20250824_172540.json  metadata_20250824_184822.json  metadata_20250825_220803.json  metadata_20250826_092155.json  metadata_20250827_055938.json  metadata_20250901_030637.json  metadata_20250901_031400.json  metadata_20250901_135336.json  models.pkl  over25_classifier_20250822_115859.joblib  over25_classifier_20250823_161639.joblib  over25_classifier_20250824_172540.joblib  over25_classifier_20250824_184822.joblib  over25_classifier_20250825_220803.joblib  over25_classifier_20250826_092155.joblib  over25_classifier_20250827_055938.joblib  over25_classifier_20250901_031400.joblib  over25_classifier_20250901_135336.joblib
predictions/: predictions_20250821_114114.csv  predictions_20250821_114740.csv  predictions_20250821_164003.csv  predictions_20250821_164435.csv  predictions_20250821_164451.csv  predictions_20250821_164807.csv  predictions_20250821_165820.csv  predictions_20250821_165839.csv  predictions_20250821_170116.csv  predictions_20250821_171350.csv  predictions_20250822_062718.csv  predictions_20250822_091245.csv  predictions_20250822_093717.csv  predictions_20250822_094003.csv  predictions_20250822_094054.csv  predictions_20250822_094746.csv  predictions_20250822_113128.csv  predictions_20250822_114103.csv  predictions_20250822_120136.csv  predictions_20250822_120308.csv  predictions_20250823_162501.csv  predictions_20250826_132748.csv  predictions_20250827_004707.csv  predictions_20250827_063757.csv  predictions_20250827_112141.csv  predictions_20250827_112436.csv  predictions_20250827_112650.csv  predictions_20250827_123004.csv  predictions_20250901_070708.csv  predictions_20250901_070800.csv  predictions_20250901_100740.csv  predictions_20250901_143435.csv  predictions_20250903_001927.csv  predictions_basic_20250821_164003.csv  predictions_basic_20250821_164435.csv  predictions_basic_20250821_164452.csv
processed_data/: league_199_high_form_teams.csv  league_204_high_form_teams.csv  league_205_high_form_teams.csv  league_207_high_form_teams.csv  league_208_high_form_teams.csv  league_209_high_form_teams.csv  league_210_high_form_teams.csv  league_214_high_form_teams.csv  league_221_high_form_teams.csv  league_223_high_form_teams.csv  league_225_high_form_teams.csv  league_227_high_form_teams.csv  league_229_high_form_teams.csv  league_230_high_form_teams.csv  league_235_high_form_teams.csv  league_236_high_form_teams.csv  league_237_high_form_teams.csv  league_241_high_form_teams.csv  league_243_high_form_teams.csv  league_244_high_form_teams.csv  league_245_high_form_teams.csv  league_246_high_form_teams.csv  league_247_high_form_teams.csv  league_248_high_form_teams.csv  league_250_high_form_teams.csv  league_311_high_form_teams.csv
reports/: dq_report_20250823_010529.html  dq_report_20250823_010529.json  dq_report_20250823_011125.html  dq_report_20250823_011125.json  dq_report_20250823_011233.html  dq_report_20250823_011233.json  dq_report_20250823_011342.html  (+11 more)
(+121 files in other folders)
