[metadata]
name = formfinder
version = 2.0.0
author = FormFinder Team
author_email = contact@formfinder.com
description = A comprehensive football prediction system with database storage and workflow orchestration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/FormFinder
project_urls =
    Bug Reports = https://github.com/yourusername/FormFinder/issues
    Source = https://github.com/yourusername/FormFinder
    Documentation = https://formfinder.readthedocs.io/
    Changelog = https://github.com/yourusername/FormFinder/blob/main/CHANGELOG.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Games/Entertainment :: Sports

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False
install_requires =
    pandas>=2.2.2
    pydantic>=2.7.1
    PyYAML>=6.0.1
    requests>=2.31.0
    SQLAlchemy>=2.0.30
    alembic>=1.13.1
    prefect>=2.19.0
    prefect-sqlalchemy>=0.4.1
    structlog>=24.1.0
    rich>=13.7.1
    python-dotenv>=1.0.1
    click>=8.1.7

[options.packages.find]
where = .
include = formfinder*
exclude = tests*

[options.extras_require]
dev =
    black>=24.4.2
    flake8>=7.0.0
    isort>=5.13.2
    mypy>=1.10.0
    pytest>=8.2.1
    pytest-cov>=5.0.0
    pytest-mock>=3.14.0
    pytest-asyncio>=0.23.6
    pytest-benchmark>=4.0.0
    bandit>=1.7.8
    safety>=3.2.0
    pre-commit>=3.7.1
    factory-boy>=3.3.0
    freezegun>=1.5.1
    responses>=0.25.0
postgresql =
    psycopg2-binary>=2.9.9
sms =
    twilio>=9.0.4
docs =
    sphinx>=7.3.7
    sphinx-rtd-theme>=2.0.0
    mkdocs>=1.6.0
    mkdocs-material>=9.5.18
monitoring =
    psutil>=5.9.8
    memory-profiler>=0.61.0

[options.entry_points]
console_scripts =
    formfinder = formfinder.cli:main
    formfinder-workflow = formfinder.workflows:cli
    formfinder-db = formfinder.database:cli

[options.package_data]
formfinder =
    config/*.yaml
    templates/*.html
    static/*

# Flake8 configuration
[flake8]
max-line-length = 88
max-complexity = 10
select = E,W,F,C,B,B9
ignore =
    # Line too long (handled by black)
    E501,
    # Line break before binary operator (conflicts with black)
    W503,
    # Whitespace before ':' (conflicts with black)
    E203,
    # Missing docstring in public module
    D100,
    # Missing docstring in public class
    D101,
    # Missing docstring in public method
    D102,
    # Missing docstring in public function
    D103,
    # Missing docstring in public package
    D104,
    # Missing docstring in magic method
    D105,
    # Missing docstring in public nested class
    D106,
    # Missing docstring in __init__
    D107
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    data,
    processed_data,
    logs,
    .pytest_cache,
    .mypy_cache,
    .coverage,
    htmlcov
per-file-ignores =
    # Tests can use assert statements and have longer lines
    tests/*:S101,E501
    # __init__.py files can have unused imports
    __init__.py:F401
    # CLI module can have longer lines for help text
    formfinder/cli.py:E501
    # Configuration files can have longer lines
    */config.py:E501

# Docstring style checking
docstring-convention = google

# Additional flake8 plugins configuration
# flake8-bugbear
extend-immutable-calls = frozenset,tuple

# flake8-comprehensions
# No additional configuration needed

# flake8-simplify
# No additional configuration needed

# flake8-docstrings
# Uses google convention as specified above

# Tool-specific configurations that don't support pyproject.toml

# Wheel configuration
[bdist_wheel]
universal = 0

# Egg configuration
[egg_info]
tag_build = 
tag_date = 0